- Use /dev/log for SYSLOG output. Thanks to Joerg Sommrey
- Use numeric output for iptables in "actioncheck"
- Fixed removal of host in hosts.deny. Thanks to René Berber
- Added new date format (2006-12-21 06:43:20) and Exim4
  filter. Thanks to mEDI
- Several "failregex" and "ignoreregex" are now accepted.
  Creation of rules should be easier now.
- Added license in COPYING. Thanks to Axel Thimm

ver. 0.7.5 (2006/12/07) - beta
----------
- Do not ban a host that is currently banned. Thanks to
  Yaroslav Halchenko
- The supported tags in "action(un)ban" are <ip>, <failures>
  and <time>
- Fixed refactoring bug (getLastcommand -> getLastAction)
- Added option "ignoreregex" in filter scripts and jail.conf.
  Feature Request #1283304
- Fixed a bug in user defined time regex/pattern
- Improved documentation
- Moved version.py and protocol.py to common/
- Merged "maxtime" option with "findtime"
- Added "<HOST>" tag support in failregex which matches
  default IP address/hostname. "(?P<host>\S)" is still valid
  and supported
- Fixed exception when calling fail2ban-server with unknown
  option
- Fixed Debian bug 400162. The "socket" option is now handled
  correctly by fail2ban-client
- Fixed RedHat init script. Thanks to Justin Shore
- Changed timeout to 30 secondes before assuming the server
  cannot be started. Thanks to Joël Bertrand

ver. 0.7.4 (2006/11/01) - beta
----------
- Improved configuration files. Thanks to Yaroslav Halchenko
- Added man page for "fail2ban-regex"
- Moved ban/unban messages from "info" level to "warn"
- Added "-s" option to specify the socket path and "socket"
  option in "fail2ban.conf"
- Added "backend" option in "jail.conf"
- Added more filters/actions and jail samples. Thanks to Nick
  Munger, Christoph Haas
- Improved testing framework
- Fixed a bug in the return code handling of the executed
  commands. Thanks to Yaroslav Halchenko
- Signal handling. There is a bug with join() and signal in
  Python