@@ -141,13 +141,15 @@ action   = shorewall
 logpath  = /var/log/apache2/error_log
 
 # This jail uses ipfw, the standard firewall on FreeBSD. The "ignoreip"
-# option is overridden in this jail.
+# option is overridden in this jail. Moreover, the action "mail-whois" defines
+# the variable "name" which contains a comma using "". The characters '' are
+# valid too.
 
 [ssh-ipfw]
 
 enabled  = false
 filter   = sshd
 action   = ipfw[localhost=192.168.0.1]
-           mail-whois[name=SSH, dest=yourmail@mail.com]
+           mail-whois[name="SSH,IPFW", dest=yourmail@mail.com]
 logpath  = /var/log/auth.log
 ignoreip = 168.192.0.1
